--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ant-design": "^1.0.0",
     "antd": "^5.24.4",
+    "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "react": "^19.0.0",
