Translated Report,Feedback,Guidelines,Profile pages

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
+    "next-i18next": "^15.4.2",
     "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
-    "tailwind-merge": "^3.0.2"
+    "tailwind-merge": "^3.0.2",
+    "trans": "^0.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -33,6 +36,7 @@
     "@types/node": "20.17.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-i18next": "^7.8.3",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
