--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.6.3",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
