--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^12.9.2",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "next": "^15.2.3",
     "next-i18next": "^15.4.2",
     "next-intl": "^4.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-i18next": "^15.4.1",
     "react-icons": "^5.5.0",
     "tailwind-merge": "^3.0.2",
