--- a/railway.toml
+++ b/railway.toml
@@ -5,6 +5,8 @@ builder = "NIXPACKS"
 runtime = "V2"
 numReplicas = 1
 sleepApplication = false
-multiRegionConfig = {"europe-west4-drams3a":{"numReplicas":1}}
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[deploy.multiRegionConfig."europe-west4-drams3a"]
+numReplicas = 1
